[gd_scene load_steps=10 format=3 uid="uid://dfeh7uu0vmwo2"]

[ext_resource type="Texture2D" uid="uid://cj8dtka4e1dro" path="res://Assets2D/menu/TitleScreen.png" id="1_5wxx0"]
[ext_resource type="Script" path="res://Scripts/UI/title_screen.gd" id="1_fh18m"]
[ext_resource type="Texture2D" uid="uid://db5oneijwdere" path="res://Assets2D/menu/Play_Plate.PNG" id="2_1hxj6"]
[ext_resource type="Texture2D" uid="uid://cipekpx1etfjd" path="res://Assets2D/menu/Play_Translucent.PNG" id="3_bhgkp"]
[ext_resource type="Texture2D" uid="uid://dogc5mu5of23f" path="res://Assets2D/menu/Credits_Menu.PNG" id="4_teuuy"]
[ext_resource type="Theme" uid="uid://ccj22doayxb2g" path="res://OtherAssets/Fonts/myLabel.tres" id="5_ftxje"]
[ext_resource type="Texture2D" uid="uid://ca4synxkehpad" path="res://Assets2D/menu/Credits_Translucent.PNG" id="5_xupow"]
[ext_resource type="Texture2D" uid="uid://c720ynw73g7cb" path="res://Assets2D/menu/Exit_Button.PNG" id="6_8depg"]
[ext_resource type="Texture2D" uid="uid://ce3q3igk0bjx7" path="res://Assets2D/menu/Exit_Translucent.PNG" id="7_lytn4"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -3.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fh18m")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00150225
anchor_top = -0.00714286
anchor_right = 1.00551
anchor_bottom = 1.01071
texture = ExtResource("1_5wxx0")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="HSplitContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.235854
anchor_top = 0.643571
anchor_right = 0.75363
anchor_bottom = 0.909286
grow_horizontal = 2
grow_vertical = 0

[node name="startButton" type="TextureButton" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_1hxj6")
texture_hover = ExtResource("3_bhgkp")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="HSplitContainer/startButton"]
visible = false
layout_mode = 0
anchor_left = 0.236842
anchor_top = 0.354839
anchor_right = 0.780702
anchor_bottom = 0.653226
offset_bottom = -13.0
theme = ExtResource("5_ftxje")
text = "Start
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="creditsButton" type="TextureButton" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_teuuy")
texture_hover = ExtResource("5_xupow")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="HSplitContainer/creditsButton"]
visible = false
layout_mode = 0
anchor_left = 0.181287
anchor_top = 0.354839
anchor_right = 0.798246
anchor_bottom = 0.653226
offset_bottom = 1.52588e-05
theme = ExtResource("5_ftxje")
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="quitButton" type="TextureButton" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_8depg")
texture_hover = ExtResource("7_lytn4")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="HSplitContainer/quitButton"]
visible = false
layout_mode = 0
anchor_left = 0.397661
anchor_top = 0.373656
anchor_right = 0.725146
anchor_bottom = 0.672043
offset_right = 1.52588e-05
theme = ExtResource("5_ftxje")
text = "Exit"
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="HSplitContainer/startButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/startButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="HSplitContainer/startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HSplitContainer/creditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="HSplitContainer/quitButton" to="." method="_on_quit_button_pressed"]
